PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_SAP_NPR_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_12Months_Net_Sales__c</fullName>
        <label>12Months Net Sales$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_12Mt_Sales_Ut_Actual__c</fullName>
        <label>12Mt Sales Ut Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_12Mt_Sales_Ut__c</fullName>
        <inlineHelpText>12Mt Sales Unit</inlineHelpText>
        <label>12Mt Sales Ut</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_ABS__c</fullName>
        <label>ABS%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_ABS_in_Currency__c</fullName>
        <label>ABS% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Add_ABS_Value__c</fullName>
        <label>Add ABS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch_Upload_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bonafied_G_N_Indicator__c</fullName>
        <label>Bonafied G/N Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_CD__c</fullName>
        <label>%CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CD_in__c</fullName>
        <label>%CD in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fee__c</fullName>
        <label>CM Fee%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_CM_Fee_in__c</fullName>
        <label>CM Fee% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CP_Units__c</fullName>
        <label>CP Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_1__c</fullName>
        <label>Comments (Section-1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_2__c</fullName>
        <label>Comments (Section-2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comments_Section_3__c</fullName>
        <label>Comments (Section-3)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_External_Description__c</fullName>
        <label>Contract External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Internal_Description__c</fullName>
        <label>Contract Internal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Month_Till_Date__c</fullName>
        <label>Current Month Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group_Code__c</fullName>
        <label>Customer_Group_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_DeadNet_w_CMFee_for_Track_Tier__c</fullName>
        <label>Dead net with CMFee for Trackg Tier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_High_GR__c</fullName>
        <label>Dead Net (High GR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_Tracking_GR__c</fullName>
        <label>Dead Net(Tracking GR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dead_Net_with_CMFee_for_H_Tier__c</fullName>
        <label>Dead Net with CMFee for high Tier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Divison__c</fullName>
        <label>Divison</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_Bonafied_Fee__c</fullName>
        <label>Fee% (Bonafied Fee)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_in_Value__c</fullName>
        <label>Fee% in $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_HighTier_in__c</fullName>
        <label>GR (HighTier)% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_Rebate_High_Tier__c</fullName>
        <label>GR Rebate% (High Tier)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_Tracking_Tier__c</fullName>
        <label>GR% (Tracking Tier)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_GR_Tracking_in__c</fullName>
        <label>GR(Tracking)% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Grwth_H_Tier__c</fullName>
        <label>Grwth H.Tier%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Grwth_L_Tier__c</fullName>
        <label>Grwth L Tier%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Sync_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sync Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_M10__c</fullName>
        <label>M10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_M11__c</fullName>
        <label>M11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_M12__c</fullName>
        <label>M12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Market_Share__c</fullName>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC11__c</fullName>
        <label>NDC11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Ref_SF_Internal__c</fullName>
        <label>NPR Ref SF Internal</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Ref_SF__c</fullName>
        <formula>Phoenix_Contract_Number__c +&quot;_&quot;+ Phoenix_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPR Ref SF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Report_Type__c</fullName>
        <label>NPR Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NPR Report</fullName>
                </value>
                <value>
                    <fullName>Future Active</fullName>
                </value>
                <value>
                    <fullName>Current Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_System_Date__c</fullName>
        <label>NPR System Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_NP_fees_CD_Trcktier__c</fullName>
        <label>NP-fees-CD-Trcktier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_NP_wo_fee_CD_Trck_Tier__c</fullName>
        <label>NP w/o fee-CD-Trck Tier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_NetPrice__c</fullName>
        <label>NetPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_Fees_CD_HiGR__c</fullName>
        <label>Net Price-Fees-CD-HiGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_Fees_CD__c</fullName>
        <label>Net Price-Fees-CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_for_GR_basis__c</fullName>
        <label>Net Price for GR basis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_Fee_CD_HiGR__c</fullName>
        <label>Net Price w/o Fee-CD-HiGR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_Fee_CD__c</fullName>
        <label>Net Price w/o Fee-CD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_w_o_Fees__c</fullName>
        <label>Net Price w/o Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Price_with_Fees__c</fullName>
        <label>Net Price with Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Net_Sales_90__c</fullName>
        <label>Net Sales$(90)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Bonafied_Fee__c</fullName>
        <label>Per Unit Bonafied Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Per_Unit_Rebate__c</fullName>
        <label>Per Unit Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_From__c</fullName>
        <label>Price Effective Value From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_To__c</fullName>
        <label>Price Effective Value To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Hierarchy__c</fullName>
        <label>Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Position__c</fullName>
        <label>Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_NLC__c</fullName>
        <label>RDC/NLC%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_RDC_NLC_in__c</fullName>
        <label>RDC/NLC% in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_G_N_Indicator__c</fullName>
        <label>Rebate G/N Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate__c</fullName>
        <label>Rebate%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Rebate_in_Value__c</fullName>
        <label>Rebate% in $ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_RequestJSONFromSAP__c</fullName>
        <label>RequestJSONFromSAP</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_From_Date_last_90_Days__c</fullName>
        <label>Sales From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Unit_90__c</fullName>
        <label>Sales Unit (90)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_NPR_Lines__c</fullName>
        <label>Total NPR Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Total_Sale_Units__c</fullName>
        <label>Total Sale Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tracking_Gr_annual_usage_Sales__c</fullName>
        <inlineHelpText>Sales with tracking Gr with annualized usage</inlineHelpText>
        <label>Tracking Gr with annualized usage Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Tracking_Gr_last_12_months_Sales__c</fullName>
        <label>Tracking Gr with last 12 months Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_UPC_NDC10__c</fullName>
        <label>UPC/NDC10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Description__c</fullName>
        <label>Vistex Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Vistex_Product_Hierarchy__c</fullName>
        <label>Vistex Product Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Check__c</fullName>
        <label>WAC Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC_Units__c</fullName>
        <label>WAC Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_WAC__c</fullName>
        <label>WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZD07_Off_Inv__c</fullName>
        <label>ZD07% (Off Inv)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZD07_Off_Inv_dollar__c</fullName>
        <label>ZD07% (Off Inv)$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_ZITD_Value__c</fullName>
        <label>ZITD Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SAP NPR Staging</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Contract_External_Description__c</columns>
        <columns>Phoenix_NPR_Ref_SF__c</columns>
        <columns>Phoenix_Contract_Internal_Description__c</columns>
        <columns>Phoenix_Vistex_Description__c</columns>
        <columns>Phoenix_Contract_Number__c</columns>
        <columns>Phoenix_Contract_Type__c</columns>
        <columns>Phoenix_Material_Number__c</columns>
        <columns>Phoenix_Contract_Price__c</columns>
        <columns>Phoenix_ZITD_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Records_for_Sync</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phoenix_Is_Sync_Completed__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Pending Records for Sync</label>
    </listViews>
    <listViews>
        <fullName>pending</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Phoenix_Is_Sync_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>pending</label>
    </listViews>
    <nameField>
        <displayFormat>NPRStg-{000000}</displayFormat>
        <label>SAP NPR Staging Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP NPR Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>